# mpi-nccl-tests

./: CMakeLists.txt  README.md  compile.sh  nccl-two-communicators-diff-types.cu  nccl-two-streams-test-diff-types.cu  nccl_one_device_per_process.cu  reduce_scatter.cu  run.nccl.sh  run.sh  send_recv.cu
benchmark/: CMakeLists.txt  allreduce.cxx  common.h  nccl_allreduce.cxx
cmake/: FindNCCL.cmake
experiments/: CMakeLists.txt  nccl-two-communicators-diff-types-with-threads.cu  nccl-two-communicators-diff-types.cu  nccl-two-streams-test-diff-streams.cu  nccl-two-streams-test-diff-types.cu  nccl-two-streams-test.cu  nccl_one_device_per_process.cu  reduce_scatter.cu  send_recv.cu
