CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(mpi_gpu_direct_test)

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(MPI REQUIRED)

# ---[ Flags
if(UNIX OR APPLE)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -std=c++11")
endif()

# ---[ NCCL
FIND_PACKAGE(NCCL REQUIRED)
if(NCCL_FOUND)
  add_definitions(-DUSE_NCCL)
  include_directories(SYSTEM ${NCCL_INCLUDE_DIR})
endif()

INCLUDE(FindCUDA)
INCLUDE_DIRECTORIES(/usr/local/cuda/include ${MPI_INCLUDE_PATH})

ADD_SUBDIRECTORY(experiments)
ADD_SUBDIRECTORY(benchmark)
